# Flower-Code

./: .gitignore  custom_strategy.py
digits-fl/: pyproject.toml
digits-fl/pytorchexample/: client_app.py  task.py
qs-pytorch/outputs/2025-12-28/11-45-35/: model_state_acc_0.1002_round_1.pth  model_state_acc_0.1146_round_2.pth  model_state_acc_0.165_round_3.pth
qs-pytorch/pytorchexample/: custom_strategy.py
qs-pytorch/wandb/: latest-run
qs-pytorch/wandb/run-20251228_114117-vnx9vvc8/: run-vnx9vvc8.wandb
qs-pytorch/wandb/run-20251228_114117-vnx9vvc8/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
qs-pytorch/wandb/run-20251228_114459-6j6g5m3c/: run-6j6g5m3c.wandb
qs-pytorch/wandb/run-20251228_114459-6j6g5m3c/files/: config.yaml  wandb-metadata.json  wandb-summary.json
qs-pytorch/wandb/run-20251228_114535-fsd76fkc/: run-fsd76fkc.wandb
qs-pytorch/wandb/run-20251228_114535-fsd76fkc/files/: config.yaml  wandb-metadata.json  wandb-summary.json
quickstart-pytorch/: final_model.pt  pyproject.toml
quickstart-pytorch/pytorchexample/: client_app.py  custom_strategy.py  server_app.py  task.py
